# gp_utils

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
gp_utils/: __init__.py  utils.py
gp_utils/evaluations/: __init__.py  metrics.py
gp_utils/models/: __init__.py  models.py
gp_utils/notebooks/: example_train.ipynb
gp_utils/pipeline/: __init__.py  pipeline.py
gp_utils/preprocessing/: __init__.py  str2num.py
gp_utils/reducers/: __init__.py  reducers.py
gp_utils/simCross/: __init__.py  simCross.py
