[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gp_utils"
version = "0.1.0"
description = "Utility package for genomic prediction models"
authors = [{ name = "UGA soybean lab", email = "ugasoybeans@gmail.com"}]
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "numpy==2.2.5",
    "pandas==2.2.3",
    "rpy2==3.4.5",
    "scikit-learn==1.6.1",
    "scipy==1.15.2"
]

[tool.setuptools.packages.find]
include = ["gp_utils"]
exclude = ["old", "tests", "examples"]
